Bug 148869 - The selected spelling suggestion in right click context menu isn't applied
Summary: The selected spelling suggestion in right click context menu isn't applied
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:7.4.0 target:7.3.4
Keywords: bibisected, bisected, regression
Depends on:
Blocks: redlinehide-regressions
  Show dependency treegraph
 
Reported: 2022-04-30 19:47 UTC by Telesto
Modified: 2022-08-08 06:41 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file (259.97 KB, application/vnd.oasis.opendocument.text)
2022-04-30 19:47 UTC, Telesto
Details
Bibisect log (2.62 KB, text/plain)
2022-04-30 19:54 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2022-04-30 19:47:22 UTC
Description:
The selected spelling suggestion in right click context menu isn't applied

Steps to Reproduce:
1. Open the attached file
2. Right click 'Hallo' (yellow) and select some suggestion (like: hello)

Actual Results:
Hallo changes into hello

Expected Results:
Nothing


Reproducible: Always


User Profile Reset: No



Additional Info:
Found in
Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 85d5113dc0472f59b60ce34ccf70c21a0edbe097
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL

not in 
7.4 oldest
Comment 1 Telesto 2022-04-30 19:47:35 UTC
Created attachment 179867 [details]
Example file
Comment 2 Telesto 2022-04-30 19:54:36 UTC
Created attachment 179868 [details]
Bibisect log

Bisected to:
author	Michael Stahl <michael.stahl@allotropia.de>	2022-03-08 13:54:08 +0100
committer	Michael Stahl <michael.stahl@allotropia.de>	2022-03-09 10:42:53 +0100
commit d814941b31b4f9cc8b6e9bd4ddc5188015529707 (patch)
tree 9cad5d94e4e8527c11db6a4c664b6a512f953b60
parent 53560aa06462f1cf04d69acafed20da971bc5c27 (diff)
sw_redlinehide: get text from shell, not node in ExecSpellPopup()
Comment 3 Telesto 2022-04-30 19:56:21 UTC
Adding: CC to Michael Stahl
Comment 4 Dieter 2022-05-13 06:46:27 UTC
Telesto, have you mixed something, because your description is the same as your expected behaviour?

I've tested with
Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 83d0f2eebae41d431d9a5bfd1a918523977752d0
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL

and actual result is, that spelling suggestion isn't applied. But for me problem is a different one:

Steps to reproduce:
1. Open attachment 179868 [details]
2.Place cursor into "Hallo" (yellow) and rght click

Actual result: First two rows of table are selected

Expected result: Only word "Hallo" is selected

Additional informations
It's not related to the image. You can delete it and problem persists. Not reproducible with mispelled word at the beginning or other rows in the table and not reproducible with a table in a new document.
Comment 5 Telesto 2022-05-13 19:29:31 UTC
(In reply to Dieter from comment #4)
> Telesto, have you mixed something, because your description is the same as
> your expected behaviour?
> 
> I've tested with
> Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
> Build ID: 83d0f2eebae41d431d9a5bfd1a918523977752d0
> CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL:
> win
> Locale: de-DE (de_DE); UI: en-GB
> Calc: CL
> 
> and actual result is, that spelling suggestion isn't applied. But for me
> problem is a different one:
> 
> Steps to reproduce:
> 1. Open attachment 179868 [details]
> 2.Place cursor into "Hallo" (yellow) and rght click
> 
> Actual result: First two rows of table are selected
> 
> Expected result: Only word "Hallo" is selected
> 
> Additional informations
> It's not related to the image. You can delete it and problem persists. Not
> reproducible with mispelled word at the beginning or other rows in the table
> and not reproducible with a table in a new document.

You're right..
Comment 6 Commit Notification 2022-05-17 17:03:48 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e2ff01a08a70a96517287ac9b9e9de6fbfd6a00b

tdf#148869 sw_redlinehide: fix SwView::ExecSpellPopup()

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Michael Stahl 2022-05-17 17:05:27 UTC
fixed on master
Comment 8 Commit Notification 2022-05-17 19:27:52 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/d2819832dcd092195c2c2dec5450dba6bd86b045

tdf#148869 sw_redlinehide: fix SwView::ExecSpellPopup()

It will be available in 7.3.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Dieter 2022-08-08 06:41:54 UTC
VERIFIED with

Version: 7.3.5.2 (x64) / LibreOffice Community
Build ID: 184fe81b8c8c30d8b5082578aee2fed2ea847c01
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL

Michael, thanks for fixing it!