tdf#148869 sw: fix SwView::ExecSpellPopup()

How could i forget that MovePara(GoCurrPara, fnParaStart) will move to
a previous paragraph when it's already at the start of the current one,
it's so intuitive.

(regression from commit d814941b31b4f9cc8b6e9bd4ddc5188015529707)

Change-Id: Ief9bcd42b7ea78feef50ac42bc93580c29c080b2